Modal: substitute field, approver/extra-approver collapse to card, label styles, placeholder fixes

--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@ body {
 }
 
 .mts-textarea::placeholder {
-  color: #626C77;
+  color: #626C77 !important;
 }
